# SoRo-19-20

./: .gitignore  DriveMode.sln  README.md
Arduino/: README.md
Arduino/arm_controller/: arm_controller.ino
Arduino/control_arm/: control_arm.ino
Arduino/drill_controller/: drill_controller.ino
Arduino/encoder_speed/: encoder_speed.ino
Arduino/rover_arm/: joint.cpp  rover_arm.ino
Arduino/rover_arm_pid_test/: rover_arm_pid_test.ino
Arduino/rover_arm_speed_test/: joint.cpp  joint.h  (+1 more)
Autonomous/: .main.cpp.swo  .main.cpp.swp  .runAutonomous.sh.swo  .runAutonomous.sh.swp  ARTester.cpp  ARTracker.cpp  ARTracker.h  CMakeLists.txt  DriveMode.cpp  DriveMode.h  DriveModeTest.cpp  Location.cpp  Location.h  LocationTester.cpp  Readme.md  UDPOut.cpp  UDPTester.cpp  config.txt  findFocalLength.cpp  main.cpp  runAutonomous.sh  tempConfig.txt  testDayChecklist.txt  urc.dict  urcDict.yml
Autonomous/cnn/: CMakeLists.txt  analyze.cpp  analyzeImage.ipynb  analyzeImage.py  data.ipynb  filterImage.py  model.py  pixelDataCollector.cpp
Autonomous/cnn/results/kernel4_5_3_1_filter20_40_60_30_stride3_4_2_-24_epoch5_pat10_batch10_model/: saved_model.pb
Autonomous/cnn/results/kernel4_5_3_1_filter20_40_60_30_stride3_4_2_-24_epoch5_pat10_batch10_model/variables/: variables.data-00000-of-00001  variables.index
Autonomous/cnn/testModel/: saved_model.pb
Autonomous/cnn/testModel/variables/: variables.data-00000-of-00001  variables.index
Autonomous/cnnCollector/: CMakeLists.txt  dataCollector.cpp  runDataCollector.sh
Autonomous/examples/: ARTester.cpp  DriveModeTest.cpp  LocationTester.cpp  UDPTester.cpp
Autonomous/gps/: README.md  Test  gps.h
Autonomous/libs/: .DriveMode.cpp.swp  ARTracker.cpp  ARTracker.h  DriveMode.cpp  DriveMode.h  Location.cpp  Location.h  UDPOut.cpp  UDPOut.h  config.txt
DriveMode/: DriveMode.cpp  DriveMode.h
Mission Control/: Readme.md
(+71 files in other folders)
